[frontend/components] Fix compose visibility dropdown z-index

--- a/Iceshrimp.Frontend/Components/Compose.razor.css
+++ b/Iceshrimp.Frontend/Components/Compose.razor.css
@@ -129,6 +129,7 @@
 ::deep {
     .dropdown-root, .dropdown-menu {
         color: var(--notice-color);
+        z-index: +2;
     }
 }
 
